# allegro5_Example_Audio

./: CMakeLists.txt  Makefile  README.md  allegro.cpp  audio.cpp  audio2.cpp
c/: CMakeLists.txt  c_audio_thread.c
